# pdfsuite

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
pdfsuite/: __init__.py  __main__.py  i18n.py
pdfsuite/api/: __init__.py  server.py
pdfsuite/cli/: __init__.py  menu.py
pdfsuite/core/: __init__.py  convert.py  info.py  merge.py  split.py  utils.py
pdfsuite/gui/: __init__.py  app.py
pdfsuite/locales/: __init__.py  en.json  tr.json
pdfsuite/webgui/: app.js  index.html  style.css
tests/: conftest.py  test_api_errors.py  test_core.py  test_gui.py  test_i18n.py
